--- a/app/frontend/public/css/style.css
+++ b/app/frontend/public/css/style.css
@@ -1,4 +1,4 @@
-html, body, h1, h2, h3, p, ul, li{
+html, body{
   margin: 0;
   padding: 0;
 }
@@ -9,6 +9,13 @@ body{
   font-family: Arial, sans-serif;
 }
 
+.main{
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 header{
   background-color: #00693e;
   color: white;
@@ -17,93 +24,12 @@ header{
   box-shadow: 5px 5p  x 10px rgba(0, 0, 0);
 }
 
-.logo_uffs{
+.logo{
   max-width: 200px;
+  background-color: #00693e;
 }
 
 .name-faculdade{
-  font-size: 18px;
+  font-size: 25px;
   margin-top: 10px;
-}
-
-.h1-cursos{
-  text-align: center;
-  font-size: 24px;
-  margin: 20px;
-}
-
-nav ul{
-  list-style-type: none;
-  text-align: center;
-  padding: 0;
-}
-
-nav ul li{
-  display: block;
-  margin-right: 10px;
-  margin-top: 10px;
-}
-
-nav a{
-  text-decoration: none;
-  color: #00693e;
-  font-weight: bold;
-}
-
-section{
-  margin: 20px;
-  padding: 20px;
-  background-color: #fff;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-section h1{
-  font-size: 24px;
-  margin-bottom: 10px;
-}
-
-.table{
-  border-collapse: collapse;
-  width: 100%;
-  margin-top: 20px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  background-color: #fff;
-}
-
-.table th{
-  background-color: #00693e;
-  color: white;
-  padding: 10px;
-  text-align: center;
-}
-
-.table td, .table th{
-  border: 1px solid #ccc;
-  padding: 10px;
-  text-align: center;
-}
-
-.table caption{
-  text-align: center;
-  font-weight: bold;
-  margin-top: 10px;
-}
-
-.table tbody tr:nth-child(even){
-  background-color: #f2f2f2;
-}
-
-.table td{
-  font-size: 14px;
-  line-height: 1.4;
-}
-
-.table th[scope="row"]{
-  text-align: center;
-  font-weight: bold;
-}
-
-.ButtonBasic{
-  color: #00693e;
 }
